[김정식] inputLayout 가변 레이아웃

--- a/app/src/main/res/layout/activity_text_input_layout.xml
+++ b/app/src/main/res/layout/activity_text_input_layout.xml
@@ -115,12 +115,29 @@
             android:hint="머터리얼 OutLineBox 스타일" />
       </com.google.android.material.textfield.TextInputLayout>
 
+      <com.google.android.material.textfield.TextInputLayout
+          android:id="@+id/input_text_multi_line"
+          style="@style/CustomTextInputLayoutOutlineBox"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_multi_line"
+            android:inputType="textMultiLine"
+            android:maxLength="100"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="텍스트 다음 줄로 변경" />
+      </com.google.android.material.textfield.TextInputLayout>
+
       <androidx.appcompat.widget.AppCompatEditText
           style="@style/CustomEditText"
-          android:hint="힌트"
+          android:hint="여러가지 컬려 변경"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:theme="@style/CustomEditText" />
+
+
 
     </LinearLayout>
   </ScrollView>
