--- a/app/src/main/res/layout/activity_media_store.xml
+++ b/app/src/main/res/layout/activity_media_store.xml
@@ -6,7 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".mediastore.MediaStoreActivity">
 
+  <androidx.appcompat.widget.AppCompatTextView
+      android:id="@+id/MediaStore"
+      style="@style/text_main_list"
+      android:layout_width="match_parent"
+      android:layout_height="70dp"
+      android:text="MediaStore"
+      app:layout_constraintTop_toTopOf="parent" />
 
-
+  <androidx.appcompat.widget.AppCompatImageView
+      android:id="@+id/image_view"
+      android:layout_width="match_parent"
+      android:layout_height="500dp"
+      app:layout_constraintTop_toBottomOf="@id/MediaStore" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
