--- a/app/src/main/res/layout/activity_util.xml
+++ b/app/src/main/res/layout/activity_util.xml
@@ -6,13 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".util.UtilActivity">
 
-  <TextView
-      android:id="@+id/randomActivity"
-      android:layout_width="match_parent"
-      android:layout_height="70dp"
-      style="@style/text_main_list"
-      android:text="randomActivity"
-      app:layout_constraintTop_toTopOf="parent" />
 
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/rv_util"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
