--- a/app/src/main/res/layout/activity_etc.xml
+++ b/app/src/main/res/layout/activity_etc.xml
@@ -10,10 +10,13 @@
   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/button_test"
       style="@style/text_main_list"
-      android:layout_width="match_parent"
+      android:layout_width="0dp"
       android:layout_height="70dp"
       android:text="ButtonAnimation"
-      app:layout_constraintTop_toTopOf="parent" />
+      android:layout_margin="10dp"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/button_test2"/>
 
   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/button_animation"
@@ -24,6 +27,39 @@
       app:layout_constraintBottom_toBottomOf="@id/button_test"
       app:layout_constraintStart_toStartOf="@id/button_test"
       app:layout_constraintEnd_toEndOf="@id/button_test"
+      />
+
+  <androidx.appcompat.widget.AppCompatTextView
+      android:id="@+id/button_test2"
+      style="@style/text_main_list"
+      android:layout_width="0dp"
+      android:layout_height="70dp"
+      android:text="ButtonAnimation"
+      android:layout_margin="10dp"
+      app:layout_constraintStart_toEndOf="@id/button_animation"
+      app:layout_constraintEnd_toStartOf="@id/button_test3"
+      app:layout_constraintTop_toTopOf="parent" />
+
+  <androidx.appcompat.widget.AppCompatTextView
+      android:id="@+id/button_test3"
+      style="@style/text_main_list"
+      android:layout_width="0dp"
+      android:layout_height="70dp"
+      android:text="ButtonAnimation"
+      android:layout_margin="10dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@id/button_test2"
+      app:layout_constraintTop_toTopOf="parent" />
+
+  <androidx.appcompat.widget.AppCompatTextView
+      android:id="@+id/button_animation3"
+      android:background="#aa666666"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      app:layout_constraintTop_toTopOf="@id/button_test3"
+      app:layout_constraintBottom_toBottomOf="@id/button_test3"
+      app:layout_constraintStart_toStartOf="@id/button_test3"
+      app:layout_constraintEnd_toEndOf="@id/button_test3"
       />
 
 
