--- a/app/src/main/res/layout/activity_etc.xml
+++ b/app/src/main/res/layout/activity_etc.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".viewtest.etc.EtcActivity">
+    tools:context=".viewtest.etc.EtcActivity"
+    android:background="@android:color/transparent">
 
 
   <androidx.appcompat.widget.AppCompatTextView
@@ -60,6 +61,20 @@
       app:layout_constraintBottom_toBottomOf="@id/button_test3"
       app:layout_constraintStart_toStartOf="@id/button_test3"
       app:layout_constraintEnd_toEndOf="@id/button_test3"
+      />
+
+
+  <androidx.appcompat.widget.AppCompatEditText
+      style="@style/EditPhoneNumberStyle"
+      android:id="@+id/edit_text_test"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:gravity="center"
+      android:paddingBottom="14dp"
+      android:layout_marginTop="8dp"
+      app:layout_constraintTop_toBottomOf="@id/button_test"
+      app:layout_constraintStart_toStartOf="@id/button_test"
+      app:layout_constraintEnd_toEndOf="@id/button_test"
       />
 
 
