--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -15,4 +15,12 @@
       android:text="string_activity"
       app:layout_constraintTop_toTopOf="parent" />
 
+  <androidx.appcompat.widget.AppCompatTextView
+      android:id="@+id/biometric_activity"
+      android:layout_width="match_parent"
+      android:layout_height="70dp"
+      style="@style/text_main_list"
+      android:text="biometricActivity"
+      app:layout_constraintTop_toBottomOf="@id/string_activity" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
