--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -7,20 +7,129 @@
     tools:context=".test.TestActivity">
 
 
-  <androidx.appcompat.widget.AppCompatTextView
-      android:id="@+id/string_activity"
+  <EditText
       android:layout_width="match_parent"
-      android:layout_height="70dp"
-      style="@style/text_main_list"
-      android:text="string_activity"
-      app:layout_constraintTop_toTopOf="parent" />
+      android:layout_height="wrap_content" />
 
-  <androidx.appcompat.widget.AppCompatTextView
-      android:id="@+id/biometric_activity"
+  <ScrollView
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+      <androidx.appcompat.widget.AppCompatTextView
+          android:id="@+id/string_activity"
+          style="@style/text_main_list"
+          android:layout_width="match_parent"
+          android:layout_height="70dp"
+          android:text="string_activity" />
+
+      <androidx.appcompat.widget.AppCompatTextView
+          style="@style/text_main_list"
+          android:layout_width="match_parent"
+          android:layout_height="70dp"
+          android:layout_marginTop="10dp"
+          android:text="biometricActivity" />
+
+      <androidx.appcompat.widget.AppCompatTextView
+          style="@style/text_main_list"
+          android:layout_width="50dp"
+          android:layout_height="70dp"
+          android:layout_marginTop="10dp"
+          android:elevation="10dp"
+          android:text="task_activity" />
+
+      <androidx.appcompat.widget.AppCompatTextView
+          style="@style/text_main_list"
+          android:layout_width="50dp"
+          android:layout_height="70dp"
+          android:layout_marginTop="10dp"
+          android:elevation="10dp"
+          android:text="task_activity" />
+
+      <androidx.appcompat.widget.AppCompatTextView
+          style="@style/text_main_list"
+          android:layout_width="50dp"
+          android:layout_height="70dp"
+          android:layout_marginTop="10dp"
+          android:elevation="10dp"
+          android:text="task_activity" />
+
+      <androidx.appcompat.widget.AppCompatTextView
+          style="@style/text_main_list"
+          android:layout_width="50dp"
+          android:layout_height="70dp"
+          android:layout_marginTop="10dp"
+          android:elevation="10dp"
+          android:text="task_activity" />
+
+
+      <androidx.appcompat.widget.AppCompatTextView
+          style="@style/text_main_list"
+          android:layout_width="50dp"
+          android:layout_height="70dp"
+          android:layout_marginTop="10dp"
+          android:elevation="10dp"
+          android:text="task_activity" />
+
+      <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+          android:id="@+id/search_view"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="100dp"
+          android:visibility="gone"
+          android:completionHint="최근 전송 이메일"
+          android:completionThreshold="1" />
+
+      <androidx.appcompat.widget.AppCompatTextView
+          style="@style/text_main_list"
+          android:layout_width="50dp"
+          android:layout_height="70dp"
+          android:layout_marginTop="10dp"
+          android:elevation="10dp"
+          android:text="task_activity" />
+
+      <androidx.appcompat.widget.AppCompatTextView
+          style="@style/text_main_list"
+          android:layout_width="50dp"
+          android:layout_height="70dp"
+          android:layout_marginTop="10dp"
+          android:elevation="10dp"
+          android:text="task_activity" />
+
+      <androidx.appcompat.widget.AppCompatTextView
+          style="@style/text_main_list"
+          android:layout_width="50dp"
+          android:layout_height="70dp"
+          android:layout_marginTop="10dp"
+          android:elevation="10dp"
+          android:text="task_activity" />
+
+      <androidx.appcompat.widget.AppCompatTextView
+          style="@style/text_main_list"
+          android:layout_width="50dp"
+          android:layout_height="70dp"
+          android:layout_marginTop="10dp"
+          android:elevation="10dp"
+          android:text="task_activity" />
+
+    </LinearLayout>
+  </ScrollView>
+
+  <EditText
       android:layout_width="match_parent"
-      android:layout_height="70dp"
-      style="@style/text_main_list"
-      android:text="biometricActivity"
-      app:layout_constraintTop_toBottomOf="@id/string_activity" />
+      android:layout_height="wrap_content"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
